--- a/WebBilboSKP.html
+++ b/WebBilboSKP.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Principal</title>
-    <link rel="stylesheet" href="/WebBilboSKP.css">
+    <link rel="stylesheet" href="WebBilboSKP.css">
     <link rel="icon" type="image/ico" href="icon.ico">
     <!--link rallina responsive-->
     <link rel="stylesheet"href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -17,10 +17,10 @@
 <body>
     
     <header>
-        <a href="#" class="logo"> <img src="/img/Imagen6.png"  width="35" height="42">Bilbo SKP</a>
+        <a href="#" class="logo"> <img src="img/Imagen6.png"  width="35" height="42">Bilbo SKP</a>
         <div class="bx bx-menu" id="menu-icon"> </div>
         <ul class="navbar">
-            <li><a href="/html/Informacion.html">Información general</a></li>
+            <li><a href="html/Informacion.html">Información general</a></li>
             <li><a href="html/Escapes.html">Escape Room Virtuales</a></li>
             <li><a href="html/Blog.html">Blog</a></li>
             <li><a href="/html/Reservas.html">Reservas</a></li>
