--- a/html/Informacion.html
+++ b/html/Informacion.html
@@ -26,60 +26,18 @@
             <li><a href="/html/Reservas.html">Reservas</a></li>
             <li><a href="html/Contacto.html">Contacto</a></li>
         </ul>
-        <li>
-            <div class="dropdown">
-                <a href="#"><img src="/img/globo.png" width="30px" height="30px" style="filter: invert(1);"></a>
-                <div class="dropdown-content">
-                <a href="#">es</a>
-                <a href="#">eus</a>
-                </div>
-            </div>
-        </li>
         <div class="header-btn">
             <a href="/html/Login.html" class="in">Login</a>
         </div>
     </header>
     <main>
-		<h1 class="titulo-neon">Compra de Bonos</h1>
-        <section class="parrafos">
-		<p>¡Compra tus bonos ahora y vive la experiencia de nuestra Escape Room Virtual! <br>
-            Ofrecemos paquetes de bonos de 1, 2, 4 y 6. Todos los bonos incluyen acceso a una Escape Room Virtual. <br>  <br>
-        </p>
-        <p> Los bonos son la forma de compra que utilizamos para poder jugar nuestros escape rooms. <br>
-            Cada bono te da la opcion de jugar a un escape room y en el momento en el que lo canjees se te descontara de tu apartado de bonos.</p>
-        </section>
-            <section class="bonos">
-			<article class="bono">
-				<h3>1 Bono</h3>
-                <ion-icon name="ticket" style="filter: invert(1);"></ion-icon></ion-icon>
-				<p class="precio">10€</p>
-				<button>Comprar</button>
-			</article>
-			<article class="bono">
-				<h3>2 Bonos</h3>
-                <ion-icon name="ticket" style="filter: invert(1);"></ion-icon><ion-icon name="ticket" style="filter: invert(1);"></ion-icon>
-				<p class="precio">15€</p>
-				<button>Comprar</button>
-			</article>
-			<article class="bono">
-				<h3>4 Bonos</h3>
-                <ion-icon name="ticket" style="filter: invert(1);"></ion-icon><ion-icon name="ticket" style="filter: invert(1);"></ion-icon><ion-icon name="ticket" style="filter: invert(1);"></ion-icon><ion-icon name="ticket" style="filter: invert(1);"></ion-icon>
-				<p class="precio">30€</p>
-				<button>Comprar</button>
-			</article>
-			<article class="bono">
-				<h3>6 Bonos</h3>
-                <ion-icon name="ticket" style="filter: invert(1);"></ion-icon><ion-icon name="ticket" style="filter: invert(1);"></ion-icon><ion-icon name="ticket" style="filter: invert(1);"></ion-icon><ion-icon name="ticket" style="filter: invert(1);"></ion-icon><ion-icon name="ticket" style="filter: invert(1);"></ion-icon><ion-icon name="ticket" style="filter: invert(1);"></ion-icon>
-				<p class="precio">45€</p>
-				<button>Comprar</button>
-			</article>
-		</section>
+		<h1 class="titulo-neon">Información</h1>
         <section class="cabecera">
             <h4>¿Cómo funcionan nuestros Escape Rooms online?</h4>
             <div class="contenido">
             <div class="par">
                 <img src="/img/person.png" class="imagenes">
-                <h5>Escoge el juego</h5>
+                <h5>Escoge</h5>
                 <p class="texto">Juega solo o con amigos, elige el juego que prefieras.</p>
             </div>
             <div class="par">
